add english version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "找到最適合你的筆記工具",
+  "name": "find-your-perfect-note-taking-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
